--- a/css/style.css
+++ b/css/style.css
@@ -18,15 +18,15 @@ html{
 			transform:translate(-50%,-50%);
 			width:400px;
 			padding:40px;
-			background:rgba(0,0,0,.8);
+			background:rgba(0.5,0.5,0.5,.8);
 			box-sizing:border-box;
-			border-shadow:0 15px 25px rgba(0,0,0,.5);
+			border-shadow:0 15px 25px rgba(0.5,0,0,.5);
 			border-radius:10px;
 		}
 		.box h2{
 			margin:0 0 30px;
 			padding:0;
-			color:#fff;
+			color:#f0f0f0;
 			text-align:center;
 		}
 		.box .inputBox{
